fix broken z-index on the about page's navbar

--- a/src/app/[lang]/about/header.module.css
+++ b/src/app/[lang]/about/header.module.css
@@ -4,6 +4,7 @@
 
     position: sticky;
     top: 0px;
+    z-index: 9999;
     box-shadow: 0px 15px 10px -15px #1118;
 
     height: var(--height);
@@ -108,6 +109,7 @@
         transform: translateY(100%);
         bottom: 0px;
         left: 0px;
+        z-index: 9999;
 
         width: 100%;
         height: 0px;
